Added TagsMain.java to isolate main method from Tags.java.